More flex box.flex-wrap/justify-content/align-itens

--- a/css/style-flex-06.css
+++ b/css/style-flex-06.css
@@ -3,14 +3,14 @@
 .container{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap-reverse;
+  align-items: baseline;
 }
 
 .box{
   display: block;
-  /*width: 10%;
+  width: 10%;
   min-width: 200px;
-  height: 100px;*/
+  /*height: 100px;*/
   margin: 20px;
   padding: 10px;
 }
