--- a/css/style-flex-07.css
+++ b/css/style-flex-07.css
@@ -3,27 +3,31 @@
 .container{
   display: flex;
   flex-direction: row;
-  align-items: stretch;
+
 }
 
 .box{
   display: block;
-  width: 10%;
-  min-width: 200px;
-  /*height: 100px;*/
+  /*width: 10%;
+  min-width: 200px;*/
+  height: 100px;
   margin: 20px;
   padding: 10px;
 }
 
 .box-1{
   background-color: #8b868c;
+  flex-grow: 1;
 }
 .box-2{
   background-color: #8e5275;
+  flex-grow: 1;
 }
 .box-3{
   background-color: #6f997b;
+  flex-grow: 2;
 }
 .box-4{
   background-color: #bdb971;
+  flex-grow: 1;
 }
