--- a/css/style-flex-08.css
+++ b/css/style-flex-08.css
@@ -17,7 +17,7 @@
 
 .box-1{
   background-color: #8b868c;
-  flex-grow: 1;
+  flex-basis: 90px;
 }
 .box-2{
   background-color: #8e5275;
@@ -25,9 +25,9 @@
 }
 .box-3{
   background-color: #6f997b;
-  flex-grow: 2;
+  flex-basis: 90px;
 }
 .box-4{
   background-color: #bdb971;
-  flex-grow: 1;
+  flex-basis: 90px;
 }
